<resources>
    <string name="app_name">GaryTokman_CE10</string>

    <string name="action_settings">Settings</string>

    <string name="all">All</string>
    <string name="favorites">Favorites</string>
    <string name="save">Save</string>

    <string name="vote_info">Vote Information</string>

    <string name="no_favorites">You have not saved any favorite politicians.</string>
    <string name="politician_saved">Politician Saved</string>
    <string name="no_data_to_display">No Data Available</string>

    <string name="chamber">Chamber:</string>
    <string name="session">Session:</string>
    <string name="question">Question:</string>
    <string name="outcome">Outcome:</string>

    <string name="appearance">Appearance</string>
    <string name="list_item_appearance">List Item Appearance</string>
    <string name="list_item_appearance_summary">Set the appearance for politician and vote info list items.</string>
    <string name="data">Data</string>
    <string name="delete_all">Delete All Favorites</string>
    <string name="delete_all_summary">Deletes all politicians from your saved favorites.</string>
    <string name="delete_all_confirm">Are you sure you want to delete all favorites data?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string-array name="list_types">
        <item>Detailed</item>
        <item>Simple</item>
    </string-array>
</resources>
